<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Category">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibRestaurant"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:contentDescription="@string/restaurant"
                app:srcCompat="@drawable/whereeat" />

            <ImageButton
                android:id="@+id/ibActivity"
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:contentDescription="@string/activity"
                app:srcCompat="@drawable/wherestay" />

            <ImageButton
                android:id="@+id/ibLodging"
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:contentDescription="@string/lodging"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/activities" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>