<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtSGName"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textColorHint="@color/cast_expanded_controller_background_color"
        app:layout_constraintBottom_toTopOf="@+id/txtSGEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:textColorHint="@color/cast_expanded_controller_background_color" />

    <EditText
        android:id="@+id/txtSGEmail"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:inputType="textWebEmailAddress"
        tools:textColorHint="@color/cast_expanded_controller_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSGName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtSGPassword"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:inputType="textPassword"
        tools:textColorHint="@color/cast_expanded_controller_background_color"
        app:layout_constraintBottom_toTopOf="@+id/txtSGConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSGEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtSGConfirmPassword"
        android:layout_width="360dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:textColor="@color/cast_expanded_controller_background_color"
        tools:textColorHint="@color/cast_expanded_controller_background_color"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtSGDoB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSGPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtSGDoB"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="228dp"
        android:ems="10"
        android:hint="@string/date_of_birth_dd_mm_yyyy"
        android:inputType="text"
        android:textColor="@color/cast_expanded_controller_background_color"
        tools:textColorHint="@color/cast_expanded_controller_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="362dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSGDoB"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSGCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="52dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />
</android.support.constraint.ConstraintLayout>