<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_tv"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/quality_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:text="@string/quality"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quality_tv"
        android:layout_marginTop="0dp"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/service_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar2"
        android:text="@string/service"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_tv"
        android:layout_marginTop="0dp"
        android:numStars="5"
        android:stepSize="0.5" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar3"
        android:layout_marginTop="15dp"
        android:text="@string/submit" />

    <RelativeLayout
        android:id="@+id/LinearLO"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp" />


        <TextView
            android:id="@+id/price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_txt"
            android:layout_marginTop="26dp"
            android:text="@string/price" />

        <RatingBar
            android:id="@+id/ratingBarof1"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_txt"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/quality_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBarof1"
            android:layout_marginTop="58dp"
            android:text="@string/quality" />

        <RatingBar
            android:id="@+id/ratingBarof2"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quality_txt"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/service_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBarof2"
            android:layout_marginTop="41dp"
            android:text="@string/service" />

        <RatingBar
            android:id="@+id/ratingBarof3"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_txt"
            android:layout_marginTop="4dp"
            android:numStars="5"
            android:stepSize="0.5" />

    </RelativeLayout>



</RelativeLayout>